--- a/7.3/playwright/.gitignore
+++ b/7.3/playwright/.gitignore
@@ -1,5 +1,6 @@
 /node_modules/
-
+/screenshot/
+user.js
 
 .vscode/*
 !.vscode/settings.json
@@ -10,3 +11,7 @@
 
 # Local History for Visual Studio Code
 .history/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
